@@ -1,3 +1,12 @@
+2010-12-07  Ian Lance Taylor  <iant@google.com>
+
+	* archive.cc (Archive::get_elf_object_for_member): Permit
+	punconfigured to be NULL.
+	(Archive::read_symbols): Pass NULL to get_elf_object_for_member.
+	(Archive::include_member): Pass NULL to get_elf_object_for_member
+	if we searched for the archive and this is the first included
+	object.
+
 2010-12-01  Ian Lance Taylor  <iant@google.com>
 
 	* dwarf_reader.h (class Sized_dwarf_line_info): Add
